--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,17 @@
 .img {
   width: 300px;
   float: left;
+  border: 2px solid #000;
+  padding: 12px;
+  margin: 12px;
+  background-color: cyan;
 }
 
 .column {
   width: 300px;
   margin: 12px;
+  padding: 12px;
+  border: 2px solid purple;
+  background-color: yellow;
   float: left;
 }
